--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": {
     "name": "Ignazio Di Napoli",
     "email": "neclepsio@gmail.com",
-    "url": "https://www.github.com/neclepsio/"
+    "url": "https://github.com/neclepsio/"
   },
   "license": "MIT",
   "bugs": {
